sandc/test/fixtures/astRegression/shouldSucceed/productions/mtrPseudex/SequentialListFillPseudex.sand
pub class SequentialListFillPseudex {
    foo() {
        let a = +["hello", "big", "big", "world"];
    }
}