sandc/test/fixtures/astRegression/shouldFail/productions/switchPseudex/CaseBlockStatement.sand
pub class CaseBlockStatement {
    foo() {
        let a = switch val {
            case c {
                foo();
            }

            else {
                d
            }
        };
    }
}